<resources>
    <string name="app_name">Chat_room</string>
    <string name="label_username">用户名:</string>
    <string name="label_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="label_confirm_password">确认密码:</string>
    <string name="message_login_not_empty">用户名或密码不能为空</string>
    <string name="message_password_not_confirm">两次输入的密码不一致</string>
    <string name="message_account_exits">该账号已存在！</string>
    <string name="message_register_error">注册失败</string>
    <string name="message_register_success">注册成功</string>
    <string name="label_remember_password">记住密码</string>
    <string name="label_auto_login">自动登陆</string>
    <string name="label_single_point">联系人</string>
    <string name="label_group">群组</string>
    <string name="message_user_not_exits">账号或者密码错误</string>
    <string name="message_exit_program">再点击一次退出程序</string>
    <string name="switch_account_title">切换账号</string>
    <string name="lable_prefrence_online">在线</string>
    <string name="lable_prefrence_offline">离线</string>
    <string name="lable_separator_slash">%1$s/%2$s</string>
    <string name="lable_send_message">发送</string>
    <string name="lable_update_refresh">正在刷新</string>
    <string name="msg_no_message">输入的消息不能为空</string>
    <string name="msg_send_message_fail">消息发送失败,请稍后重试</string>
    <string name="msg_no_more_data">已经没有更多的消息了</string>

</resources>
