<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#FFFFE0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/login_linear"
        android:paddingTop="40dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_username"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/label_username"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/value_username"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:gravity="left"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/label_password"
                android:gravity="right"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/label_password" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/value_password"
                android:layout_weight="2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:gravity="left"
                android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/bg_login_rectangle"/>
                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:text="@string/register"
                    android:background="@drawable/bg_login_rectangle"/>
                </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <CheckBox
                android:id="@+id/remeber_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/label_remember_password"/>

            <CheckBox
                android:id="@+id/login_auto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/label_auto_login"/>
            </LinearLayout>
        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_icon"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_login"
        android:layout_above="@id/login_linear"/>

</RelativeLayout>
