<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:text="@string/label_username"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/value_username"
            android:layout_weight="2"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:gravity="left"
            android:padding="8dp"
            android:background="@drawable/blue_empty_rounded_rectangle"
            android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_password"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/value_password"
                android:layout_weight="2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:gravity="left"
                android:padding="8dp"
                android:background="@drawable/blue_empty_rounded_rectangle"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/label_confirm_password"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/value_confirm_password"
                android:layout_weight="2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:gravity="left"
                android:padding="8dp"
                android:background="@drawable/blue_empty_rounded_rectangle"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:padding="8dp"
            android:background="@drawable/bg_login_rectangle"/>

        </LinearLayout>
</LinearLayout>
